--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "react-dom": "^16.13.1",
     "react-intl": "^5.20.7",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "sass": "^1.39.0",
+    "sass-loader": "^12.1.0"
+  },
+  "devDependencies": {
+    "sass-loader": "^11.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
